--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,9 +7,10 @@ on:
   push:
     branches: 
       - main
-    path:
+    paths:
       - "/sf/**"
-name: Slack Notification AI
+      
+
 jobs:
   # unit tests
   units:
