--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,13 +10,18 @@ on:
     paths:
       - "/sf/**"
 
-jobs:
-  slackNotification:
+Jobs:
+  notify:
     name: Slack Notification
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Slack Notification
-      uses: rtCamp/action-slack-notify@v2
-      env:
-        SLACK_WEBHOOK: ${{ secrets.INCOMING_WEBHOOK_URL }}
+      - name: 'Send Notification'
+        run: |
+          jq -n '{
+            attachments: [{
+              pretext: "Swagger が更新されたよ！",
+              color: "good",
+              title: "${{ github.event.pull_request.title }}",
+              title_link: "${{ github.event.pull_request.html_url }}"
+            }]
+          }' | curl -H 'Content-Type: application/json' -d @- ${{ secrets.INCOMING_WEBHOOK_URL }}
