--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ on:
     branches: 
       - main
     paths:
-      - "/testesttestgitacction/sf/**"
+      - '/testesttestgitacction/sf/**'
 
 jobs:
   notify:
