--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
             attachments: [{
               pretext: "テーブルスキーマが変更されました。",
               color: "good",
-              commits: "${{ github.event.push.commits }}",
+              commits: "${{ github.event.push }}",
               title_link: "${{ github.event.push.html_url }}"
             }]
           }' | curl -H 'Content-Type: application/json' -d @- ${{ secrets.INCOMING_WEBHOOK_URL }}
