--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,8 @@ jobs:
               pretext: "テーブルスキーマが変更されました。${{ github.event.push }}",
               color: "good",
               commits: "${{ github.event.push }}",
-              title_link: "${{ github.event.push.html_url }}"
+              "title": "${{github.event.push}}",
+              "title_link": "https://api.slack.com/",
+              "text": "Optional text that appears within the attachment"
             }]
           }' | curl -H 'Content-Type: application/json' -d @- ${{ secrets.INCOMING_WEBHOOK_URL }}
