--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,6 @@ jobs:
               commits: "${{ github.event.push }}",
               title: "${{github.event.push}}",
               title_link: "https://api.slack.com/",
-              text: "${{github.event.repositoryUrl}}"
+              text: "${{github.repositoryUrl}}"
             }]
           }' | curl -H 'Content-Type: application/json' -d @- ${{ secrets.INCOMING_WEBHOOK_URL }}
