--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,9 +29,6 @@ jobs:
             {
               pretext: "テスト ${{ github}}",
               color: "good",
-              commits: "${{ github}}",
-              title: "${{github}}",
-              title_link: "https://api.slack.com/",
-              text: "${{github.repositoryUrl}}"
+              text: "repojitory_rul:${{github.repositoryUrl}}\\n message:${{github.head_commit.message}} \\n url:${{github.head_commit.url}}"
             }]
           }' | curl -H 'Content-Type: application/json' -d @- ${{ secrets.INCOMING_WEBHOOK_URL }}
