--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,9 +18,10 @@ jobs:
       - name: 'Send Notification'
         run: |
           jq -n '{
+            channel: "#general",
             attachments: [
             {
-              pretext: "<!general>テスト",
+              pretext: "<!channel>テスト",
               color: "good",
               text: "repojitory_rul : ${{github.repositoryUrl}}\n message : ${{github.event.head_commit.message}}\n url : ${{github.event.head_commit.url}}"
             }]
