--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,9 +19,8 @@ jobs:
         run: |
           jq -n '{
             attachments: [
-            {
-              pretext: "&lt!aaa&gt テスト",
+              pretext: "スキーマ変更テスト",
               color: "good",
-              text: "repojitory_rul : ${{github.repositoryUrl}}\n message : ${{github.event.head_commit.message}}\n url : ${{github.event.head_commit.url}}"
+              text: "<!general> <!aaa> repojitory_rul : ${{github.repositoryUrl}}\n message : ${{github.event.head_commit.message}}\n url : ${{github.event.head_commit.url}}"
             }]
           }' | curl -H 'Content-Type: application/json' -d @- ${{ secrets.INCOMING_WEBHOOK_URL }}
