--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
                     },
                     {
                      title: "CommitURL",
-                     value: "${{ toJSON(github.event.head_commit.message)}}",
+                     value: ${{ toJSON(github.event.head_commit.message)}},
                     }
                 ]
             }]
