--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -24,7 +24,7 @@ jobs:
                 "type": "section",
                 "text": {
                   "type": "mrkdwn",
-                  "text": ${{ toJSON(format('📝 *リリースノート* \\n  {0}', github.event.head_commit.message)) }}
+                  "text": ${{ toJSON(format('📝 *リリースノート* \n\n  {0}', github.event.head_commit.message)) }}
                 }
               }
             ]
