--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -15,6 +15,11 @@ jobs:
     name: Slack Notification2
     runs-on: ubuntu-latest
     steps:
+     - name: Set version
+       id: setmsg
+       run: |
+         MSG=$(echo ${{ toJSON(github.event.head_commit.message) }} |sed -e 's/"$//' | sed -e 's/^"//')
+         echo ::set-output name=msg::$MSG
       - name: 'Send Notification'
         run: |
           jq -n '{
@@ -24,7 +29,7 @@ jobs:
                 "type": "section",
                 "text": {
                   "type": "mrkdwn",
-                  "text": ${{ toJSON(format('📝 *リリースノート* \n\n  {0}', github.event.head_commit.message)) }}
+                  "text": "📝 *リリースノート* \n${{steps.setmsg.outputs.msg}}"
                 }
               }
             ]
