--- a/.github/workflows/test3.yml
+++ b/.github/workflows/test3.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/github-script@v5
         id: set-result
         with:
-          script: return "${{github.event.head_commit.message}}".replace(/\"/g, '\\"')
+          script: return ${{toJSON(github.event.head_commit.message)}}.replace(/\"/g, '\\"')
           result-encoding: string
       - name: Get result
         run: echo "${{steps.set-result.outputs.result}}"
